<resources>
    <string name="app_name">ZapBurguer</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Endereço de e-mail inválido!</string>
    <string name="error_invalid_password">Senha está muito curta</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Campo Obrigatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_resgister">Registrar</string>
    <string name="cpf">CPF</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="title_activity_test_login">Sign in</string>
    <string name="name">Nome</string>
    <string name="register">Cadastro</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Promoções</string>
    <string name="add_item">Adicionar item</string>
    <string name="lembrar_email">Lembrar e mail</string>
    <string name="exit">Sair</string>
    <string name="add_promotion">Adicionar promoção</string>
    <string name="lista_pedidos">Lista de Pedidos</string>
    <string name="promoiton_register">Cadastro de promoção</string>
    <string name="value">Valor</string>
    <string name="description">Descrição</string>
    <string name="valid">Válido até:</string>
    <string name="atention">Atenção</string>
    <string name="remover">Deseja remover a promoção %1$s</string>
    <string name="ok">Ok</string>

    <string name="Titulo_List">Nome Comida</string>
    <string name="Descricao_List">Descrição Comida bla bla bla bla bla bla bla bla bla n sei oq n sei oq la</string>
    <string name="menu_register">Novo cardápio</string>
    <string name="title_menu">Cardápio</string>
    <string name="valor">VALOR R$:</string>
    <string name="custo">20,00</string>
    <string name="plus">+</string>
    <string name="less">-</string>
</resources>
